meta and title attributes

--- a/screens/home.html
+++ b/screens/home.html
@@ -1,5 +1,9 @@
-<html>
+<html lang="en">
 	<head>
+		<title>Gemütlichkeit</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+
 		<!-- load web-awesome kit -->
 		<script src="https://kit.webawesome.com/79755c32e4134acc.js" crossorigin="anonymous"></script>
 
