Made event page, invitee group component, and style sheet for the input grid
Co-authored-by: Jesse Jurman <j.r.jurman@gmail.com>

--- a/screens/person-association.html
+++ b/screens/person-association.html
@@ -28,12 +28,7 @@
 
 		<link href="../styles/layout.css" rel="stylesheet" />
 		<link href="../styles/sc-card.css" rel="stylesheet" />
-
-		<!-- mobile page layout -->
-		<style>
-			main {
-			}
-		</style>
+		<link href="../styles/input-grid.css" rel="stylesheet" />
 
 		<!-- person association page styles -->
 		<style>
@@ -57,28 +52,6 @@
 				font-size: 1.5em;
 				align-self: flex-start;
 				text-align: start;
-			}
-
-			input-group {
-				display: grid;
-				grid-template-columns: auto 1fr;
-				align-items: center;
-				gap: 1em;
-				width: 100%;
-
-				label {
-					grid-column: 1 / 1;
-				}
-
-				input {
-					grid-column: 2 / 2;
-				}
-			}
-			input-row {
-				display: grid;
-				grid-column: 1 / -1;
-				grid-template-columns: subgrid;
-				align-items: center;
 			}
 
 			avatar-header {
